# rust_hip_proof_of_concept

./: .gitignore  Cargo.toml  build.rs  file_copy.cpp
hip_macros/: Cargo.toml
hip_macros/src/: lib.rs
hip_poc_macros/: Cargo.toml
hip_poc_macros/src/: lib.rs
kernels/: Cargo.toml  launcher.hpp
kernels/.cargo/: config.toml
kernels/src/: lib.rs
src/: device_info.rs  main.rs
src/wrapper/: error.rs  mod.rs  primitives.rs  wrapper.cpp
test_c/: Makefile  main.cpp
