[package]
name = "hip_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc = "1.1.18"
hip_macros = {path = "./hip_macros"}
itertools = "0.13.0"
libc = "0.2.147"
libloading = "0.8.3"

[build-dependencies]
cmake = "0.1.31"
